// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Main playlist > Parses Main_AlternativeAudio.m3u8 1`] = `
{
  "defines": [],
  "independentSegments": false,
  "medias": [
    {
      "autoSelect": true,
      "channels": undefined,
      "characteristics": undefined,
      "default": true,
      "groupId": "aac",
      "language": "en",
      "name": "English",
      "type": "AUDIO",
      "uri": "main/english-audio.m3u8",
    },
    {
      "autoSelect": true,
      "channels": undefined,
      "characteristics": undefined,
      "default": false,
      "groupId": "aac",
      "language": "de",
      "name": "Deutsch",
      "type": "AUDIO",
      "uri": "main/german-audio.m3u8",
    },
    {
      "autoSelect": false,
      "channels": undefined,
      "characteristics": undefined,
      "default": false,
      "groupId": "aac",
      "language": "en",
      "name": "Commentary",
      "type": "AUDIO",
      "uri": "commentary/audio-only.m3u8",
    },
  ],
  "variants": [
    {
      "audio": "aac",
      "bandwidth": 1280000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "low/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 2560000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "mid/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 7680000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "hi/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 65000,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "main/english-audio.m3u8",
    },
  ],
}
`;

exports[`Main playlist > Parses Main_Basic.m3u8 1`] = `
{
  "defines": [],
  "independentSegments": false,
  "medias": [],
  "variants": [
    {
      "audio": undefined,
      "bandwidth": 1280000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "http://example.com/low.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 2560000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "http://example.com/mid.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 7680000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "http://example.com/hi.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 65000,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "http://example.com/audio-only.m3u8",
    },
  ],
}
`;

exports[`Main playlist > Parses Main_Characteristics.m3u8 1`] = `
{
  "defines": [],
  "independentSegments": false,
  "medias": [
    {
      "autoSelect": true,
      "channels": undefined,
      "characteristics": "public.accessibility.transcribes-spoken-dialog,public.easy-to-read",
      "default": true,
      "groupId": "aac",
      "language": "en",
      "name": "English",
      "type": "AUDIO",
      "uri": "main/english-audio.m3u8",
    },
    {
      "autoSelect": true,
      "channels": undefined,
      "characteristics": "public.accessibility.transcribes-spoken-dialog,public.easy-to-read",
      "default": false,
      "groupId": "aac",
      "language": "de",
      "name": "Deutsch",
      "type": "AUDIO",
      "uri": "main/german-audio.m3u8",
    },
    {
      "autoSelect": false,
      "channels": undefined,
      "characteristics": "public.accessibility.transcribes-spoken-dialog,public.easy-to-read",
      "default": false,
      "groupId": "aac",
      "language": "en",
      "name": "Commentary",
      "type": "AUDIO",
      "uri": "commentary/audio-only.m3u8",
    },
  ],
  "variants": [
    {
      "audio": "aac",
      "bandwidth": 1280000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "low/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 2560000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "mid/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 7680000,
      "codecs": "mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "hi/video-only.m3u8",
    },
    {
      "audio": "aac",
      "bandwidth": 65000,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "main/english-audio.m3u8",
    },
  ],
}
`;

exports[`Main playlist > Parses Main_GroupedVariants.m3u8 1`] = `
{
  "defines": [],
  "independentSegments": true,
  "medias": [
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": true,
      "groupId": "aac_high",
      "language": undefined,
      "name": "English",
      "type": "AUDIO",
      "uri": "aac_high_eng.m3u8",
    },
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": false,
      "groupId": "aac_high",
      "language": undefined,
      "name": "Japanese",
      "type": "AUDIO",
      "uri": "aac_high_jp.m3u8",
    },
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": true,
      "groupId": "aac_mid",
      "language": undefined,
      "name": "English",
      "type": "AUDIO",
      "uri": "aac_mid_eng.m3u8",
    },
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": false,
      "groupId": "aac_mid",
      "language": undefined,
      "name": "Japanese",
      "type": "AUDIO",
      "uri": "aac_mid_jp.m3u8",
    },
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": true,
      "groupId": "aac_low",
      "language": undefined,
      "name": "English",
      "type": "AUDIO",
      "uri": "aac_low_eng.m3u8",
    },
    {
      "autoSelect": undefined,
      "channels": undefined,
      "characteristics": undefined,
      "default": false,
      "groupId": "aac_low",
      "language": undefined,
      "name": "Japanese",
      "type": "AUDIO",
      "uri": "aac_low_jp.m3u8",
    },
  ],
  "variants": [
    {
      "audio": "aac_high",
      "bandwidth": 6000000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "1080p.m3u8",
    },
    {
      "audio": "aac_mid",
      "bandwidth": 3000000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "720p.m3u8",
    },
    {
      "audio": "aac_mid",
      "bandwidth": 1500000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "540p.m3u8",
    },
    {
      "audio": "aac_low",
      "bandwidth": 1000000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "360p.m3u8",
    },
  ],
}
`;

exports[`Main playlist > Parses Main_IFrame.m3u8 1`] = `
{
  "defines": [],
  "independentSegments": false,
  "medias": [],
  "variants": [
    {
      "audio": undefined,
      "bandwidth": 1280000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "low/audio-video.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 2560000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "mid/audio-video.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 7680000,
      "codecs": "avc1.640029,mp4a.40.2",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "hi/audio-video.m3u8",
    },
    {
      "audio": undefined,
      "bandwidth": 65000,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": undefined,
      "uri": "audio-only.m3u8",
    },
  ],
}
`;
